k8s/travel-demo/control/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: travel-control
  labels:
    # istio.io/dataplane-mode: ambient
