k8s/travel-demo/control/travel-agency-gateway.yaml
# Kept as reference
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: travel-demo-gateway
  annotations:
    external-dns.alpha.kubernetes.io/hostname: travel-demo.bramble
  # TODO: what service should this gateway target?
  # the control service @ 8080
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: travel-demo
spec:
  parentRefs:
    - name: travel-demo-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: control
          port: 8080
